fixed the footer's spacing

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
     top: 0;
     right:  0;
 }
+.site-footer .widget-area {
+    margin: 9.09090% auto 0;
+}
 @media screen and (min-width: 59.6875em){
     .site-header{
         margin: 20% 0 5%;
